@@ -2,6 +2,8 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
 
+  - Change README minter template from pod to markdown.
+
 4.201     2014-02-01T16:40:02Z
 
   - Bump Dist::Zilla and Pod::Weaver prereqs for Encoding updates.
